; (include sources.dune)

(library
 (name print)
 (public_name stelf.print)
 (modules
  symbol
  clause_print
  print_
  traverse
  print_twega
  print_xml
  print_omdoc
  clause_print_intf
  print_intf
  print_omdoc_intf
  print_twega_intf
  print_xml_intf
  symbol_intf
  traverse_intf)
 (libraries lambda names formatter basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
