; (include sources.dune)

(library
 (name print)
 (public_name stelf.print)
 (modules
  Symbol
  ClausePrint
  Print_
  Traverse
  PrintTwega
  PrintXml
  PrintOmdoc
  ClausePrint_intf
  Print_intf
  PrintOmdoc_intf
  PrintTwega_intf
  PrintXml_intf
  Symbol_intf
  Traverse_intf)
 (libraries
  lambda
  names
  formatter
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
