(include sources.dune)

(library
 (name prover)
 (public_name twelf.prover)
 (modules
  state
  psearch
  data
  fill
  split
  fixedpoint
  introduce
  elim
  interactive
  pweaken
  prover_)
 (libraries
  tomega
  lambda
  global
  names
  print
  index
  modes
  typecheck
  table
  subordinate
  solvers
  opsem
  trail
  compile
  worldcheck
  formatter
  timing
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Tomega_
   -open
   Lambda_
   -open
   Global_
   -open
   Names_
   -open
   Print_
   -open
   Index_
   -open
   Modes_
   -open
   Typecheck_
   -open
   Table_
   -open
   Subordinate_
   -open
   Solvers_
   -open
   Opsem_
   -open
   Trail_
   -open
   Compile_
   -open
   Worldcheck_
   -open
   Formatter_
   -open
   Timing_))
 (wrapped false))
