; (include sources.dune)

(library
 (name server)
 (public_name twelf.server)
 (modules sigint mlton_thread sigint_mlton sigint_smlnj server_)
 (libraries timing frontend basis smlofnj)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Frontend
   -open
   Frontend.Frontend_
   -open
   Smlofnj))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
