; (include sources.dune)

(library
 (name server)
 (public_name stelf.server)
 (modules
  sigint
  mlton_thread
  sigint_mlton
  sigint_smlnj
  server_
  server_intf
  sigint_intf)
 (libraries timing frontend basis smlofnj)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Frontend
   -open
   Frontend.Frontend_
   -open
   Smlofnj))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
