; (include sources.dune)

(library
 (name solvers)
 (public_name twelf.solvers)
 (modules
  cs_manager
  cs
  cs_eq_field
  cs_ineq_field
  cs_eq_integers
  cs_ineq_integers
  cs_eq_strings
  cs_eq_bools
  cs_integers_word
  solvers_)
 (libraries
  trail
  global
  domains
  lambda
  names
  modes
  table
  print
  formatter
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Global
   -open
   Global.Global_
   -open
   Domains
   -open
   Domains.Domains_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Table
   -open
   Table.Table_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter.Formatter_))
 (wrapped true)
 (preprocess
  (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
