; (include sources.dune)

(library
 (name solvers)
 (public_name stelf.solvers)
 (modules
  CsManager
  Cs
  CsEqField
  CsIneqField
  CsEqIntegers
  CsIneqIntegers
  CsEqStrings
  CsEqBools
  CsIntegersWord
  Solvers_
  Cs_intf
  CsEqField_intf
  CsEqIntegers_intf
  CsManager_intf
  Solvers_intf)
 (libraries
  trail
  global
  domains
  lambda
  names
  modes
  table
  print
  formatter
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Global
   -open
   Global.Global_
   -open
   Domains
   -open
   Domains.Domains_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Table
   -open
   Table.Table_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
  Formatter__Formatter_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
