(include sources.dune)

(library
 (name style)
 (public_name twelf.style)
 (modules style_)
 (libraries global table lambda formatter print names paths index basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global_
   -open
   Table_
   -open
   Lambda_
   -open
   Formatter_
   -open
   Print_
   -open
   Names_
   -open
   Paths_
   -open
   Index_))
 (wrapped false))
