; (include sources.dune)

(library
 (name style)
 (public_name twelf.style)
 (modules style_)
 (libraries global table lambda formatter print names paths index basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Formatter
   -open
   Formatter.Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Index
   -open
   Index.Index_))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
