(include sources.dune)

(library
 (name subordinate)
 (public_name twelf.subordinate)
 (modules intset subordinate_)
 (libraries global table lambda names basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global_
   -open
   Table_
   -open
   Lambda_
   -open
   Names_))
 (wrapped false))
