; (include sources.dune)

(library
 (name table)
 (public_name twelf.table)
 (modules
  hash_table
  string_hash
  red_black_tree
  ring
  queue
  sparse_array
  sparse_array2
  red_black_set
  table_
  table_instances)
 (libraries basis)
 (flags
  (:standard -open Basis))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
