; (include sources.dune)

(library
 (name table)
 (public_name stelf.table)
 (modules
  hash_table
  string_hash
  red_black_tree
  ring
  queue
  sparse_array
  sparse_array2
  red_black_set
  table_
  table_instances
  queue_intf
  red_black_set_intf
  ring_intf
  sparse_array_intf
  sparse_array2_intf
  string_hash_intf
  table_intf)
 (libraries basis)
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
