; (include sources.dune)

(library
 (name table)
 (public_name stelf.table)
 (modules
  HashTable
  StringHash
  RedBlackTree
  Ring
  Queue
  SparseArray
  SparseArray2
  RedBlackSet
  Table_
  TableInstances
  Queue_intf
  RedBlackSet_intf
  Ring_intf
  SparseArray_intf
  SparseArray2_intf
  StringHash_intf
  Table_intf)
 (libraries
  basis)
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
