(include sources.dune)

(library
 (name tabling)
 (public_name twelf.tabling)
 (modules tabledsyn tabled)
 (libraries table lambda print names paths index basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table_
   -open
   Lambda_
   -open
   Print_
   -open
   Names_
   -open
   Paths_
   -open
   Index_))
 (wrapped false))
