; (include sources.dune)

(library
 (name terminate)
 (public_name stelf.terminate)
 (modules checking reduces terminate_)
 (libraries
  global
  trail
  lambda
  names
  print
  formatter
  index
  subordinate
  paths
  solvers
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter.Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Subordinate
   -open
   Subordinate.Subordinate_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Solvers
   -open
   Solvers.Solvers_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
