(include sources.dune)

(library
 (name thm)
 (public_name twelf.thm)
 (modules thmsyn thmprint thm_)
 (libraries global lambda names formatter modes paths tabling basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global_
   -open
   Lambda_
   -open
   Names_
   -open
   Formatter_
   -open
   Modes_
   -open
   Paths_))
 (wrapped false))
