; (include sources.dune)

(library
 (name thm)
 (public_name stelf.thm)
 (modules
  thmsyn
  thmprint
  thm_
  thm_intf
  thmprint_intf
  thmsyn_intf)
 (libraries global lambda names formatter modes paths tabling basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
  Formatter__Formatter_
   -open
   Modes
   -open
  Modes__Modes_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Tabling))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
